--- a/App.Admin/Views/Home/Index.cshtml
+++ b/App.Admin/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
     <div data-options="region:'center',border:false">
         <div id="mainTab" class="easyui-tabs" data-options="fit:true">
             <div title="我的桌面" data-options="closable:true" style="overflow: hidden; background:#fff">
-                <iframe scrolling="auto" frameborder="0" src="" style="width: 100%; height: 100%;"></iframe>
+                <iframe scrolling="auto" frameborder="0" src="/SysSample" style="width: 100%; height: 100%;"></iframe>
             </div>
             <div title="系统设置" data-options="closable:true" style="overflow: hidden; background:#fff">
                 <iframe scrolling="auto" frameborder="0" src="" style="width: 100%; height: 100%;"></iframe>
