--- a/App.Admin/Views/SysSample/Index.cshtml
+++ b/App.Admin/Views/SysSample/Index.cshtml
@@ -4,7 +4,70 @@
     Layout = "~/Views/Shared/_Index_Layout.cshtml";
 }
 
-<table id="List"></table>
+<div id="modalwindow" class="easyui-window" data-options="modal:true,closed:true,minimizable:false,shadow:false"></div>
+<div class="mvctool">
+    <input id="txtQuery" type="text" class="searchText">
+    <a id="btnQuery" style="float: left;" class="l-btn l-btn-plain">
+        <span class="l-btn-left">
+            <span class="l-btn-text icon-search" style="padding-left: 20px;">
+                查询
+            </span>
+        </span>
+    </a>
+    <div class="datagrid-btn-separator">
+    </div>
+    <a id="btnCreate" style="float: left;" class="l-btn l-btn-plain">
+        <span class="l-btn-left">
+            <span class="l-btn-text icon-add" style="padding-left: 20px;">
+                新增
+            </span>
+        </span>
+    </a>
+    <div class="datagrid-btn-separator">
+    </div>
+    <a id="btnEdit" style="float: left;" class="l-btn l-btn-plain">
+        <span class="l-btn-left">
+            <span class="l-btn-text icon-edit" style="padding-left: 20px;">
+                编辑
+            </span>
+        </span>
+    </a>
+    <div class="datagrid-btn-separator">
+    </div>
+    <a id="btnDetails" style="float: left;" class="l-btn l-btn-plain">
+        <span class="l-btn-left">
+            <span class="l-btn-text icon-details" style="padding-left: 20px;">
+                详细
+            </span>
+        </span>
+    </a>
+    <div class="datagrid-btn-separator">
+    </div>
+    <a id="btnDelete" style="float: left;" class="l-btn l-btn-plain">
+        <span class="l-btn-left">
+            <span class="l-btn-text icon-remove" style="padding-left: 20px;">
+                删除
+            </span>
+        </span>
+    </a>
+    <div class="datagrid-btn-separator">
+    </div>
+    <a id="btnExport" style="float: left;" class="l-btn l-btn-plain">
+        <span class="l-btn-left">
+            <span class="l-btn-text icon-export" style="padding-left: 20px;">
+                导出
+            </span>
+        </span>
+    </a>
+    <a id="btnReload" style="float: left;" class="l-btn l-btn-plain">
+        <span class="l-btn-left">
+            <span class="l-btn-text icon-reload" style="padding-left: 20px;">
+                刷新
+            </span>
+        </span>
+    </a>
+</div>
+<div id="List"></div>
 <script type="text/javascript">
     $(function () {
         $('#List').datagrid({
@@ -34,70 +97,72 @@
         });
     });
 </script>
+<script type="text/javascript">
 
+    //ifram 返回
+    function frameReturnByClose() {
+        $("#modalwindow").window('close');
+    }
+    //iframe 返回并刷新
+    function frameReturnByReload(flag) {
+        if (flag)
+            $("#List").datagrid('load');
+        else
+            $("#List").datagrid('reload');
+    }
+    //输出信息
+    function frameReturnByMes(mes) {
+        $.messageBox5s('提示', mes);
+    }
+    $(function () {
 
-@*<!DOCTYPE html>
+        $("#btnCreate").click(function () {
+            $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='no' frameborder='0'' src='/SysSample/Create'></iframe>");
+            $("#modalwindow").window({ title: '新增', width: 700, height: 400, iconCls: 'icon-add' }).window('open');
+        });
+        $("#btnEdit").click(function () {
+            var row = $('#List').datagrid('getSelected');
+            if (row != null) {
+                $("#modalwindow").html("<iframe width='100%' height='99%'  frameborder='0' src='/SysSample/Edit?id=" + row.Id + "&Ieguid=" + GetGuid() + "'></iframe>");
+                $("#modalwindow").window({ title: '编辑', width: 700, height: 430, iconCls: 'icon-edit' }).window('open');
+            } else { $.messageBox5s('提示', '请选择要操作的记录'); }
+        });
+        $("#btnDetails").click(function () {
+            var row = $('#List').datagrid('getSelected');
+            if (row != null) {
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-    <table>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Age)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Bir)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Photo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Note)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreateTime)
-            </th>
-            <th></th>
-        </tr>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Age)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Bir)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Photo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Note)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreateTime)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </td>
-            </tr>
+                $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='no' frameborder='0' src='/SysSample/Details?id=" + row.Id + "&Ieguid=" + GetGuid() + "'></iframe>");
+                $("#modalwindow").window({ title: '详细', width: 500, height: 300, iconCls: 'icon-details' }).window('open');
+            } else { $.messageBox5s('提示', '请选择要操作的记录'); }
+            });
+        $("#btnQuery").click(function () {
+            var queryStr = $("#txtQuery").val();
+            //如果查询条件为空默认查询全部
+            if (queryStr == null) {
+                queryStr = "%";
+            }
+            $('#List').datagrid({
+                url: '/SysSample/GetList?queryStr=' + encodeURI(queryStr)
+            });
+
+        });
+        $("#btnDelete").click(function () {
+            var row = $('#List').datagrid('getSelected');
+            if (row != null) {
+                $.messager.confirm('提示', '确定删除', function (r) {
+                        if (r) {
+                            $.post("/SysSample/Delete?id=" + row.Id, function (data) {
+                                if (data.type == 1)
+                                    $("#List").datagrid('load');
+                                $.messageBox5s('提示', data.message);
+                            }, "json");
+
+                        }
+                    });
+            } else { $.messageBox5s('提示', '请选择要操作的记录'); }
+        });
+        function GetGuid() {
+            return $.guid++;
         }
-
-    </table>
-</body>
-</html>*@
+    });
+</script>
