--- a/App.Admin/Views/Home/Index.cshtml
+++ b/App.Admin/Views/Home/Index.cshtml
@@ -10,8 +10,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     @*<script src="@Url.Content("~/Scripts/jquery-1.11.3.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.easyui-1.4.5.min.js")" type="text/javascript"></script>*@
+        <script src="@Url.Content("~/Scripts/jquery.easyui-1.4.5.min.js")" type="text/javascript"></script>*@
     @Scripts.Render("~/bundles/jquery")
+    <script src="~/Scripts/jquery.tree.js"></script>
+    <link href="~/Content/tree/css/tree.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/default/css")
     @Scripts.Render("~/bundles/home")
@@ -78,5 +80,32 @@
         <div id="menu" class="easyui-menu" style="width: 150px;">
         </div>
     </div>
+    <script type="text/javascript">
+        $(function () {
+            var o = {
+                showcheck: false,
+                url: "/Home/GetTree",
+                onnodeclick: function (item) {
+                    var tabTitle = item.text;
+                    var url = "../../" + item.value;
+                    var icon = item.Icon;
+                    if (!item.hasChildren) {
+                        addTab(tabTitle, url, icon);
+                    } else {
+
+                        $(this).parent().find("img").trigger("click");
+                    }
+                }
+            }
+            $.post("/Home/GetTree", { "id": "0" },
+                function (data) {
+                    if (data == "0") {
+                        window.location = "/Account";
+                    }
+                    o.data = data;
+                    $("#RightTree").treeview(o);
+                }, "json");
+        });
+    </script>
 </body>
 </html>
