--- a/App.Admin/Views/Shared/_Index_Layout.cshtml
+++ b/App.Admin/Views/Shared/_Index_Layout.cshtml
@@ -4,6 +4,7 @@
         <title>@ViewBag.Title</title>
         <script src="@Url.Content("~/Scripts/jquery-1.7.2.min.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/jquery.easyui-1.3.0.min.js")" type="text/javascript"></script>
+        @*@Scripts.Render("~/bundles/jquery")*@
         <script src="~/Scripts/jquery.easyui.plus.js" type="text/javascript"></script>
         @Styles.Render("~/Content/css")
         @Styles.Render("~/Content/themes/default/css")      
