--- a/App.Admin/Views/Shared/_Index_Layout.cshtml
+++ b/App.Admin/Views/Shared/_Index_Layout.cshtml
@@ -5,7 +5,8 @@
         <script src="@Url.Content("~/Scripts/jquery-1.7.2.min.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/jquery.easyui-1.3.0.min.js")" type="text/javascript"></script>
         @*@Scripts.Render("~/bundles/jquery")*@
-        <script src="~/Scripts/jquery.easyui.plus.js" type="text/javascript"></script>
+        <script src="~/Scripts/jquery.easyui.plus.js"></script>
+        <script src="~/Scripts/date.format.js"></script>
         @Styles.Render("~/Content/css")
         @Styles.Render("~/Content/themes/default/css")      
     </head>
