--- a/App.Admin/Views/SysSample/Index.cshtml
+++ b/App.Admin/Views/SysSample/Index.cshtml
@@ -92,7 +92,7 @@
                 { field: 'Bir', title: '生日', width: 80, align: 'right' },
                 { field: 'Photo', title: '照片', width: 250 },
                 { field: 'Note', title: '说明', width: 60, align: 'center' },
-                { field: 'CreateTime', title: '创建时间', width: 60, align: 'center' }
+                { field: 'CreateTime', title: '创建时间', width: 60, align: 'center', formatter: formatDateboxFull, editor: 'datetimebox' }
             ]]
         });
     });
