--- a/App.Admin/Views/SysSample/Details.cshtml
+++ b/App.Admin/Views/SysSample/Details.cshtml
@@ -4,7 +4,7 @@
 @using App.Admin;
 
 @{
-    ViewBag.Title = "详细";
+    ViewBag.Title = Suggestion.Details;
     Layout = "~/Views/Shared/_Index_LayoutEdit.cshtml";
 }
 
