--- a/App.Admin/Views/SysException/Details.cshtml
+++ b/App.Admin/Views/SysException/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model App.Models.Sys.SysExceptionModel
-@using App.Admin;
+@using App.Admin.Core;
 @using App.Common;
 
 @using App.Models.Sys;
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = Suggestion.Details;
     Layout = "~/Views/Shared/_Index_LayoutEdit.cshtml";
 }
 <script type="text/javascript">
@@ -16,7 +16,7 @@
     });
 </script>
 <div class="mvctool bgb">
-    <a id="btnReturn" style="float: left;" class="l-btn l-btn-plain"><span class="l-btn-left"><span class="l-btn-text icon-return" style="padding-left: 20px;">返回</span></span></a>
+    @Html.ToolButton("btnReturn", "icon-return", Suggestion.Return, false)
 </div>
 @using (Html.BeginForm())
 {
