--- a/App.Admin/Views/SysLog/Details.cshtml
+++ b/App.Admin/Views/SysLog/Details.cshtml
@@ -1,9 +1,9 @@
 ﻿@model App.Models.Sys.SysLogModel
 @using App.Common;
-@using App.Admin;
+@using App.Admin.Core;
 @using App.Models.Sys;
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = Suggestion.Details;
     Layout = "~/Views/Shared/_Index_LayoutEdit.cshtml";
 
 }
@@ -15,7 +15,7 @@
     });
 </script>
 <div class="mvctool bgb">
-    <a id="btnReturn" style="float: left;" class="l-btn l-btn-plain"><span class="l-btn-left"><span class="l-btn-text icon-return" style="padding-left: 20px;">返回</span></span></a>
+    @Html.ToolButton("btnReturn", "icon-return", Suggestion.Return, false)
 </div>
 @using (Html.BeginForm())
 {
