--- a/App.Admin/Views/SysLog/Index.cshtml
+++ b/App.Admin/Views/SysLog/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using App.Admin;
+﻿@using App.Admin.Core;
 @using App.Common;
 @using App.Models.Sys;
 @{
@@ -8,9 +8,12 @@
 
 <div class="mvctool">
     <input id="txtQuery" type="text" class="searchText" />
-    <a id="btnQuery" style="float: left;" class="l-btn l-btn-plain"><span class="l-btn-left"><span class="l-btn-text icon-search" style="padding-left: 20px;">查询</span></span></a><div class="datagrid-btn-separator"></div>
-    <a id="btnDetails" style="float: left;" class="l-btn l-btn-plain"><span class="l-btn-left"><span class="l-btn-text icon-details" style="padding-left: 20px;">详细</span></span></a><div class="datagrid-btn-separator"></div>
-    <a id="btnDelete" style="float: left;" class="l-btn l-btn-plain"><span class="l-btn-left"><span class="l-btn-text icon-remove" style="padding-left: 20px;">删除</span></span></a>
+    @Html.ToolButton("btnQuery", "icon-search", Suggestion.Query, true)
+    @Html.ToolButton("btnDetails", "icon-details", Suggestion.Details, true)
+    @Html.ToolButton("btnDelete", "icon-remove", Suggestion.Delete, true)
+    @*<a id="btnQuery" style="float: left;" class="l-btn l-btn-plain"><span class="l-btn-left"><span class="l-btn-text icon-search" style="padding-left: 20px;">@Suggestion.Query</span></span></a><div class="datagrid-btn-separator"></div>
+    <a id="btnDetails" style="float: left;" class="l-btn l-btn-plain"><span class="l-btn-left"><span class="l-btn-text icon-details" style="padding-left: 20px;">@Suggestion.Details</span></span></a><div class="datagrid-btn-separator"></div>
+    <a id="btnDelete" style="float: left;" class="l-btn l-btn-plain"><span class="l-btn-left"><span class="l-btn-text icon-remove" style="padding-left: 20px;">@Suggestion.Delete</span></span></a>*@
 </div>
 
 <table id="List"></table>
@@ -29,7 +32,7 @@
             $("#List").datagrid('reload');
     }
     function frameReturnByMes(mes) {
-        $.messageBox5s('提示', mes);
+        $.messageBox5s('@Suggestion.Tip', mes);
     }
 
     $(function () {
@@ -54,7 +57,7 @@
                 { field: 'Result', title: '结果', width: 40, align: 'center' },
                 { field: 'Type', title: '类型', width: 40, align: 'center' },
                 { field: 'Module', title: '模块', width: 60, align: 'center' },
-                { field: 'CreateTime', title: '添加时间', width: 65, align: 'center', formatter: formatDateboxFull, editor: 'datetimebox' }
+                { field: 'CreateTime', title: '添加时间', width: 65, align: 'center'}
             ]]
         });
     });
@@ -70,7 +73,7 @@
 
                 $("#modalwindow").html("<iframe width='100%' height='98%' frameborder='0' src='/SysLog/Details?id=" + row.Id + "'></iframe>");
                 $("#modalwindow").window({ title: '详细', width: 500, height: 400, iconCls: 'icon-details' }).window('open');
-            } else { $.messageBox5s('提示', '请选择要操作的行！'); }
+            } else { $.messageBox5s('@Suggestion.Tip', '@Suggestion.PlaseChooseToOperatingRecords！'); }
         });
         $("#btnQuery").click(function () {
             var queryStr = $("#txtQuery").val();
@@ -83,17 +86,17 @@
         $("#btnDelete").click(function () {
             var row = $('#List').datagrid('getSelected');
             if (row != null) {
-                $.messager.confirm('提示', '确定删除', function (r) {
+                $.messager.confirm('@Suggestion.Tip', '@Suggestion.YouWantToDeleteTheSelectedRecords', function (r) {
                     if (r) {
                         $.post("/SysLog/Delete?id=" + row.Id, function (data) {
                             if (data.Type == 1)
                                 $("#List").datagrid('load');
-                            $.messageBox5s('提示', data.Message);
+                            $.messageBox5s('@Suggestion.Tip', data.Message);
                         }, "json");
 
                     }
                 });
-            } else { $.messageBox5s('提示', '请选择要操作的记录'); }
+            } else { $.messageBox5s('@Suggestion.Tip', '@Suggestion.PlaseChooseToOperatingRecords'); }
         });
     });
 </script>
