--- a/App.Admin/Views/SysSample/Index.cshtml
+++ b/App.Admin/Views/SysSample/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<App.Models.Sys.SysSampleModel>
+﻿@using App.Common;
+@using App.Admin.Core;
+@model IEnumerable<App.Models.Sys.SysSampleModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Index_Layout.cshtml";
@@ -7,10 +9,10 @@
 <div id="modalwindow" class="easyui-window" data-options="modal:true,closed:true,minimizable:false,shadow:false"></div>
 <div class="mvctool">
     <input id="txtQuery" type="text" class="searchText">
-    <a id="btnQuery" style="float: left;" class="l-btn l-btn-plain">
+    @*<a id="btnQuery" style="float: left;" class="l-btn l-btn-plain">
         <span class="l-btn-left">
             <span class="l-btn-text icon-search" style="padding-left: 20px;">
-                查询
+                @Suggestion.Query
             </span>
         </span>
     </a>
@@ -19,7 +21,7 @@
     <a id="btnCreate" style="float: left;" class="l-btn l-btn-plain">
         <span class="l-btn-left">
             <span class="l-btn-text icon-add" style="padding-left: 20px;">
-                新增
+                @Suggestion.Create
             </span>
         </span>
     </a>
@@ -28,7 +30,7 @@
     <a id="btnEdit" style="float: left;" class="l-btn l-btn-plain">
         <span class="l-btn-left">
             <span class="l-btn-text icon-edit" style="padding-left: 20px;">
-                编辑
+                @Suggestion.Edit
             </span>
         </span>
     </a>
@@ -37,7 +39,7 @@
     <a id="btnDetails" style="float: left;" class="l-btn l-btn-plain">
         <span class="l-btn-left">
             <span class="l-btn-text icon-details" style="padding-left: 20px;">
-                详细
+                @Suggestion.Details
             </span>
         </span>
     </a>
@@ -46,7 +48,7 @@
     <a id="btnDelete" style="float: left;" class="l-btn l-btn-plain">
         <span class="l-btn-left">
             <span class="l-btn-text icon-remove" style="padding-left: 20px;">
-                删除
+                @Suggestion.Delete
             </span>
         </span>
     </a>
@@ -55,21 +57,39 @@
     <a id="btnExport" style="float: left;" class="l-btn l-btn-plain">
         <span class="l-btn-left">
             <span class="l-btn-text icon-export" style="padding-left: 20px;">
-                导出
+                @Suggestion.Export
             </span>
         </span>
     </a>
     <a id="btnReload" style="float: left;" class="l-btn l-btn-plain">
         <span class="l-btn-left">
             <span class="l-btn-text icon-reload" style="padding-left: 20px;">
-                刷新
+                @Suggestion.Reload
             </span>
         </span>
-    </a>
+    </a>*@
+    @Html.ToolButton("btnQuery", "icon-search", Suggestion.Query, true)
+    @Html.ToolButton("btnCreate", "icon-add", Suggestion.Create, true)
+    @Html.ToolButton("btnEdit", "icon-edit", Suggestion.Edit, true)
+    @Html.ToolButton("btnDetails", "icon-details", Suggestion.Details, true)
+    @Html.ToolButton("btnDelete", "icon-remove", Suggestion.Delete, true)
+    @Html.ToolButton("btnExport", "icon-export", Suggestion.Export, true)
+    @Html.ToolButton("btnReload", "icon-reload", Suggestion.Reload, false)
 </div>
 <div id="List"></div>
 <script type="text/javascript">
     $(function () {
+
+        $(window).resize(function () {
+            $('#List').datagrid('resize', {
+                width: $(window).width() - 10,
+                height: $(window).height() - 35
+            }).datagrid('resize', {
+                width: $(window).width() - 10,
+                height: $(window).height() - 35
+            });
+        });
+
         $('#List').datagrid({
             url: '/SysSample/GetList',
             width: $(window).width() - 10,
@@ -92,7 +112,8 @@
                 { field: 'Bir', title: '生日', width: 80, align: 'right' },
                 { field: 'Photo', title: '照片', width: 250 },
                 { field: 'Note', title: '说明', width: 60, align: 'center' },
-                { field: 'CreateTime', title: '创建时间', width: 60, align: 'center', formatter: formatDateboxFull, editor: 'datetimebox' }
+                { field: 'CreateTime', title: '创建时间', width: 60, align: 'center' }
+                //{ field: 'CreateTime', title: '发生时间', width: 60, align: 'center', formatter: formatDateboxFull, editor: 'datetimebox' }
             ]]
         });
     });
@@ -112,28 +133,28 @@
     }
     //输出信息
     function frameReturnByMes(mes) {
-        $.messageBox5s('提示', mes);
+        $.messageBox5s('@Suggestion.Tip', mes);
     }
     $(function () {
 
         $("#btnCreate").click(function () {
             $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='no' frameborder='0'' src='/SysSample/Create'></iframe>");
-            $("#modalwindow").window({ title: '新增', width: 700, height: 400, iconCls: 'icon-add' }).window('open');
+            $("#modalwindow").window({ title: '@Suggestion.Create', width: 700, height: 400, iconCls: 'icon-add' }).window('open');
         });
         $("#btnEdit").click(function () {
             var row = $('#List').datagrid('getSelected');
             if (row != null) {
                 $("#modalwindow").html("<iframe width='100%' height='99%'  frameborder='0' src='/SysSample/Edit?id=" + row.Id + "&Ieguid=" + GetGuid() + "'></iframe>");
-                $("#modalwindow").window({ title: '编辑', width: 700, height: 430, iconCls: 'icon-edit' }).window('open');
-            } else { $.messageBox5s('提示', '请选择要操作的记录'); }
+                $("#modalwindow").window({ title: '@Suggestion.Edit', width: 700, height: 430, iconCls: 'icon-edit' }).window('open');
+            } else { $.messageBox5s('@Suggestion.Tip', '@Suggestion.PlaseChooseToOperatingRecords'); }
         });
         $("#btnDetails").click(function () {
             var row = $('#List').datagrid('getSelected');
             if (row != null) {
 
                 $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='no' frameborder='0' src='/SysSample/Details?id=" + row.Id + "&Ieguid=" + GetGuid() + "'></iframe>");
-                $("#modalwindow").window({ title: '详细', width: 500, height: 300, iconCls: 'icon-details' }).window('open');
-            } else { $.messageBox5s('提示', '请选择要操作的记录'); }
+                $("#modalwindow").window({ title: '@Suggestion.Details', width: 500, height: 300, iconCls: 'icon-details' }).window('open');
+            } else { $.messageBox5s('@Suggestion.Tip', '@Suggestion.PlaseChooseToOperatingRecords'); }
             });
         $("#btnQuery").click(function () {
             var queryStr = $("#txtQuery").val();
@@ -149,17 +170,17 @@
         $("#btnDelete").click(function () {
             var row = $('#List').datagrid('getSelected');
             if (row != null) {
-                $.messager.confirm('提示', '确定删除', function (r) {
+                $.messager.confirm('@Suggestion.Tip', '@Suggestion.YouWantToDeleteTheSelectedRecords', function (r) {
                         if (r) {
                             $.post("/SysSample/Delete?id=" + row.Id, function (data) {
                                 if (data.Type == 1)
                                     $("#List").datagrid('load');
-                                $.messageBox5s('提示', data.Message);
+                                $.messageBox5s('@Suggestion.Tip', data.Message);
                             }, "json");
 
                         }
                     });
-            } else { $.messageBox5s('提示', '请选择要操作的记录'); }
+            } else { $.messageBox5s('@Suggestion.Tip', '@Suggestion.PlaseChooseToOperatingRecords'); }
         });
         function GetGuid() {
             return $.guid++;
