--- a/App.Admin/Views/Home/Index.cshtml
+++ b/App.Admin/Views/Home/Index.cshtml
@@ -10,13 +10,14 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     @*<script src="@Url.Content("~/Scripts/jquery-1.11.3.min.js")" type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/jquery.easyui-1.4.5.min.js")" type="text/javascript"></script>*@
+        @*<script src="@Url.Content("~/Scripts/jquery.easyui-1.4.5.min.js")" type="text/javascript"></script>*@
     @Scripts.Render("~/bundles/jquery")
     <script src="~/Scripts/jquery.tree.js"></script>
     <link href="~/Content/tree/css/tree.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/default/css")
     @Scripts.Render("~/bundles/home")
+    
     <title>Index</title>
 </head>
 <body class="easyui-layout">
