--- a/App.Admin/Views/Shared/_Index_Layout.cshtml
+++ b/App.Admin/Views/Shared/_Index_Layout.cshtml
@@ -4,11 +4,13 @@
         <title>@ViewBag.Title</title>
         <script src="@Url.Content("~/Scripts/jquery-1.7.2.min.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/jquery.easyui-1.3.0.min.js")" type="text/javascript"></script>
-        @*@Scripts.Render("~/bundles/jquery")*@
         <script src="~/Scripts/jquery.easyui.plus.js"></script>
         <script src="~/Scripts/date.format.js"></script>
+        <script src="~/Scripts/jquery.tree.js"></script>
+        <link href="~/Content/tree/css/tree.css" rel="stylesheet" />
         @Styles.Render("~/Content/css")
-        @Styles.Render("~/Content/themes/default/css")      
+        @Styles.Render("~/Content/themes/default/css")   
+        @Scripts.Render("~/bundles/home")   
     </head>
     <body>
     <div style="padding:5px 5px 0px 5px;">
