--- a/App.Admin/Views/SysModule/Index.cshtml
+++ b/App.Admin/Views/SysModule/Index.cshtml
@@ -218,6 +218,9 @@
                     }
                 });
             } else { $.messageBox5s('提示', '请选择一个要赋予操作码的模块!'); }
-         });
+        });
+        function GetGuid() {
+            return $.guid++;
+        }
     });
 </script>
