--- a/App.Admin/Views/Shared/_Index_LayoutEdit.cshtml
+++ b/App.Admin/Views/Shared/_Index_LayoutEdit.cshtml
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
-    <script src="@Url.Content("~/Scripts/jquery.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.easyui.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery-1.7.2.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.easyui-1.3.0.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.easyui.plus.js")" type="text/javascript"></script>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/default/css")      
