--- a/App.Admin/Views/SysModule/Create.cshtml
+++ b/App.Admin/Views/SysModule/Create.cshtml
@@ -22,13 +22,13 @@
                 data: $("form").serialize(),
                 dataType: "json",
                 success: function (data) {
-                    if (data.type == 1) {
-                        window.parent.frameReturnByMes(data.message);
+                    if (data.Type == 1) {
+                        window.parent.frameReturnByMes(data.Message);
                         window.parent.frameReturnByReload(true);
                         window.parent.frameReturnByClose()
                     }
                     else {
-                        window.parent.frameReturnByMes(data.message);
+                        window.parent.frameReturnByMes(data.Message);
                     }
                 }
             });
@@ -47,7 +47,6 @@
 @using (Html.BeginForm())
 {
     @Html.HiddenFor(model => model.Id)
-    @Html.HiddenFor(model => model.CreateTime)
     <table class="fromEditTable setTextWidth300">
         <tbody>
             <tr>
