--- a/App.Admin/Views/SysModule/CreateOpt.cshtml
+++ b/App.Admin/Views/SysModule/CreateOpt.cshtml
@@ -22,13 +22,13 @@
                 data: $("form").serialize(),
                 dataType: "json",
                 success: function (data) {
-                    if (data.type == 1) {
-                        window.parent.frameReturnByMes(data.message);
+                    if (data.Type == 1) {
+                        window.parent.frameReturnByMes(data.Message);
                         window.parent.frameReturnByReloadOpt(true);
                         window.parent.frameReturnByClose()
                     }
                     else {
-                        window.parent.frameReturnByMes(data.message);
+                        window.parent.frameReturnByMes(data.Message);
                     }
                 }
             });
