--- a/App.Admin/Views/Shared/_Partial_AutoGrid.cshtml
+++ b/App.Admin/Views/Shared/_Partial_AutoGrid.cshtml
@@ -4,10 +4,12 @@
         $(window).resize(function () {
             $('#List').datagrid('resize', {
                 width: $(window).width() - 10,
-                height: SetGridHeightSub(39)
+                height: $(window).height()
+                //height: SetGridHeightSub(39)
             }).datagrid('resize', {
                 width: $(window).width() - 10,
-                height: SetGridHeightSub(39)
+                height:$(window).height()
+                //height: SetGridHeightSub(39)
             });
         });
 
