add allot right/role/user

--- a/App.Admin/Views/SysLog/Index.cshtml
+++ b/App.Admin/Views/SysLog/Index.cshtml
@@ -19,7 +19,7 @@
 <table id="List"></table>
 <div id="Pager"></div>
 <div id="modalwindow" class="easyui-window" data-options="modal:true,closed:true,minimizable:false,shadow:false"></div>
-@*Jqgrid*@
+@Html.Partial("~/Views/Shared/_Partial_AutoGrid.cshtml")
 <script type="text/javascript">
     //ifram 返回
     function frameReturnByClose() {
