--- a/App.Admin/Views/Shared/_Partial_AutoGrid.cshtml
+++ b/App.Admin/Views/Shared/_Partial_AutoGrid.cshtml
@@ -3,15 +3,23 @@
     $(function () {
         $(window).resize(function () {
             $('#List').datagrid('resize', {
-                width: $(window).width() - 10,
-                height: $(window).height()
-                //height: SetGridHeightSub(39)
+                width: SetGridWidthSub(10),
+                //width: $(window).width() - 10,
+                //height: $(window).height()
+                height: SetGridHeightSub(39)
             }).datagrid('resize', {
-                width: $(window).width() - 10,
-                height:$(window).height()
-                //height: SetGridHeightSub(39)
+                width: SetGridWidthSub(10),
+                //width: $(window).width() - 10,
+                //height:$(window).height()
+                height: SetGridHeightSub(39)
             });
         });
 
     });
+    function SetGridWidthSub(w) {
+        return $(window).width() - w;
+    }
+    function SetGridHeightSub(h) {
+        return $(window).height() - h
+    }
 </script>
