--- a/App.Admin/Views/SysRole/Index.cshtml
+++ b/App.Admin/Views/SysRole/Index.cshtml
@@ -24,18 +24,19 @@
 </div>
 <div id="modalwindow" class="easyui-window" data-options="modal:true,closed:true,minimizable:false,shadow:false"></div>
 <table id="List"></table>
+@Html.Partial("~/Views/Shared/_Partial_AutoGrid.cshtml")
 <script type="text/javascript">
     $(function () {
 
-        $(window).resize(function () {
-            $('#List').datagrid('resize', {
-                width: $(window).width() - 10,
-                height: $(window).height() - 35
-            }).datagrid('resize', {
-                width: $(window).width() - 10,
-                height: $(window).height() - 35
-            });
-        });
+        //$(window).resize(function () {
+        //    $('#List').datagrid('resize', {
+        //        width: $(window).width() - 10,
+        //        height: $(window).height() - 35
+        //    }).datagrid('resize', {
+        //        width: $(window).width() - 10,
+        //        height: $(window).height() - 35
+        //    });
+        //});
 
         $('#List').datagrid({
             url: '@Url.Action("GetList")',
@@ -76,6 +77,13 @@
         $.messageBox5s('提示', mes);
     }
     $(function () {
+        $("#btnAllot").click(function () {
+            var row = $('#List').datagrid('getSelected');
+            if (row != null) {
+                $("#modalwindow").html("<iframe width='100%' height='100%' scrolling='no' frameborder='0' src='/SysRole/GetUserByRole?roleId=" + row.Id + "&Ieguid=" + GetGuid() + "'></iframe>");
+                $("#modalwindow").window({ title: '分配用户', width: 720, height: 400, iconCls: 'icon-edit' }).window('open');
+            } else { $.messageBox5s('提示', '请选择一个需要分配用户的角色'); }
+        });
         $("#btnExport").click(function () {
             $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='no' frameborder='0'' src='/SysHelper/ReportControl'></iframe>");
             $("#modalwindow").window({ title: '导出', width: 320, height: 200, iconCls: 'icon-add' }).window('open');
